# vantage-point-tree-open-mp

./: .gitignore  CMakeLists.txt  demande.md  plot.py  rapport.md
src/: CMakeLists.txt  bench_naive.cpp  bench_vptree.cpp  experiments.cpp  experiments.h  main.cpp  optparser.cpp  vpparallel.cpp  vpparallel.h  vpserial.cpp  vpserial.h  vtkpointcloud.cpp  vtkpointcloud.h
test/: CMakeLists.txt  test_parallel.cpp  test_serial.cpp  test_vantagepoint.cpp  testutils.h
